--- a/pace1.html
+++ b/pace1.html
@@ -4,6 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time, Pace, Distance Calculator</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f9;
+        }
+
+        .calculator {
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            width: 100%;
+        }
+
+        .calculator h1 {
+            font-size: 1.5em;
+            margin-bottom: 20px;
+            text-align: center;
+            color: #333;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+            color: #555;
+        }
+
+        input {
+            width: calc(100% - 20px);
+            padding: 8px;
+            margin-right: 5px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 1em;
+        }
+
+        input[type="number"] {
+            width: calc(33% - 10px);
+            display: inline-block;
+            text-align: center;
+        }
+
+        button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #007BFF;
+            border: none;
+            border-radius: 4px;
+            color: white;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        .form-inline input {
+            width: calc(50% - 15px);
+        }
+
+        .form-inline input:last-child {
+            margin-left: 10px;
+        }
+
+        .form-group button {
+            margin-top: 10px;
+        }
+
+    </style>
     <script>
         function calculateTime() {
             const paceMinutes = parseInt(document.getElementById('paceMinutes').value) || 0;
@@ -55,28 +139,31 @@
     </script>
 </head>
 <body>
-    <h1>Time, Pace, and Distance Calculator</h1>
+    <div class="calculator">
+        <h1>Time, Pace, and Distance Calculator</h1>
 
-    <div>
-        <label for="timeHours">Time (hh:mm:ss):</label>
-        <input type="number" id="timeHours" placeholder="hh" min="0"> :
-        <input type="number" id="timeMinutes" placeholder="mm" min="0" max="59"> :
-        <input type="number" id="timeSeconds" placeholder="ss" min="0" max="59">
-        <button onclick="calculateTime()">Calculate Time</button>
+        <div class="form-group">
+            <label for="timeHours">Time (hh:mm:ss):</label>
+            <input type="number" id="timeHours" placeholder="hh" min="0"> :
+            <input type="number" id="timeMinutes" placeholder="mm" min="0" max="59"> :
+            <input type="number" id="timeSeconds" placeholder="ss" min="0" max="59">
+            <button onclick="calculateTime()">Calculate Time</button>
+        </div>
+
+        <div class="form-group">
+            <label for="paceMinutes">Pace (mm:ss per km):</label>
+            <div class="form-inline">
+                <input type="number" id="paceMinutes" placeholder="mm" min="0">
+                <input type="number" id="paceSeconds" placeholder="ss" min="0" max="59">
+            </div>
+            <button onclick="calculatePace()">Calculate Pace</button>
+        </div>
+
+        <div class="form-group">
+            <label for="distance">Distance (km):</label>
+            <input type="number" id="distance" placeholder="xx.xx" min="0" step="0.01">
+            <button onclick="calculateDistance()">Calculate Distance</button>
+        </div>
     </div>
-
-    <div>
-        <label for="paceMinutes">Pace (mm:ss per km):</label>
-        <input type="number" id="paceMinutes" placeholder="mm" min="0"> :
-        <input type="number" id="paceSeconds" placeholder="ss" min="0" max="59">
-        <button onclick="calculatePace()">Calculate Pace</button>
-    </div>
-
-    <div>
-        <label for="distance">Distance (km):</label>
-        <input type="number" id="distance" placeholder="xx.xx" min="0" step="0.01">
-        <button onclick="calculateDistance()">Calculate Distance</button>
-    </div>
-
 </body>
 </html>
