--- a/pace1.html
+++ b/pace1.html
@@ -155,7 +155,7 @@
             <button onclick="calculateDistance()">DISTANCE</button>
         </div>
 
-        <div class="memory">Memory: Store – Recall Time, Speed & Distance</div>
+        <div class="memory">ขอให้สนุกกับการวิ่งครับ!</div>
     </div>
 </body>
 </html>
