--- a/pace2.html
+++ b/pace2.html
@@ -2,21 +2,75 @@
 <html>
 <head>
 <title>Pace Calculator</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-/* ... (CSS เหมือนเดิม) ... */
+body {
+    font-family: sans-serif;
+    margin: 20px;
+    background-color: #f4f4f4; /* เพิ่มสีพื้นหลัง */
+}
+.container {
+    max-width: 400px; /* จำกัดความกว้างบนเดสก์ท็อป */
+    margin: 0 auto;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* เพิ่มเงา */
+}
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold; /* เพิ่มความหนาตัวอักษร */
+}
+input[type="number"] {
+    width: calc(50% - 10px); /* ปรับความกว้างให้พอดี */
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+button:hover {
+    background-color: #45a049;
+}
+#results {
+    margin-top: 20px;
+}
+.result-item {
+    padding: 8px;
+    border-bottom: 1px solid #eee; /* เพิ่มเส้นแบ่ง */
+}
+.result-item:last-child {
+    border-bottom: none;
+}
+.input-group {
+    display: flex; /* ใช้ flexbox จัดเรียง input */
+    gap: 10px;
+}
 </style>
 </head>
 <body>
 <div class="container">
-    <h1>Pace Calculator (นาที/กม.)</h1>
-    <label for="minutes">Pace:</label>
+    <h1>Pace Calculator</h1>
+
+    <label for="minutes">Pace (นาที/กม.):</label>
     <div class="input-group">
         <input type="number" id="minutes" placeholder="นาที" min="0" value="0">
         <input type="number" id="seconds" placeholder="วินาที" min="0" max="59" value="0">
     </div>
 
     <label for="percentage">เปอร์เซ็นต์ (%):</label>
-    <input type="number" id="percentage" placeholder="ตัวเลขจำนวนเต็ม" min="0" value="100">
+    <input type="number" id="percentage" placeholder="เช่น 90" min="0" value="100">
 
     <button onclick="calculatePace()">คำนวณ</button>
 
@@ -25,9 +79,9 @@
 
 <script>
 function calculatePace() {
-    let minutes = parseInt(document.getElementById("minutes").value) || 0;
-    let seconds = parseInt(document.getElementById("seconds").value) || 0;
-    let percentage = parseInt(document.getElementById("percentage").value) || 100; // ค่าเริ่มต้นเป็น 100
+    const minutes = parseInt(document.getElementById("minutes").value) || 0;
+    const seconds = parseInt(document.getElementById("seconds").value) || 0;
+    const percentage = parseInt(document.getElementById("percentage").value) || 100;
 
     const totalSeconds = (minutes * 60) + seconds;
 
@@ -35,26 +89,13 @@ function calculatePace() {
         alert("กรุณาป้อน Pace ให้ถูกต้อง");
         return;
     }
+    if (isNaN(percentage) || percentage < 0) {
+        alert("กรุณาป้อนเปอร์เซ็นต์ให้ถูกต้อง");
+        return;
+    }
 
     const resultsDiv = document.getElementById("results");
     resultsDiv.innerHTML = "";
-
-    percentage = Math.round(percentage);
-
-    const targetPaceSeconds = (totalSeconds / (percentage / 100));
-    const targetPaceMinutes = Math.floor(targetPaceSeconds / 60);
-    const targetPaceRemainingSeconds = Math.round(targetPaceSeconds % 60);
-
-    let speedDescription = "";
-    if (percentage > 100) {
-        speedDescription = "เร็วขึ้นจาก Input";
-    } else if (percentage < 100) {
-        speedDescription = `ช้าลง ${100-percentage}% จาก Input`;
-    } else {
-        speedDescription = "เท่ากับ Input";
-    }
-
-    resultsDiv.innerHTML += `<p>${percentage}% = ${targetPaceMinutes}:${targetPaceRemainingSeconds.toString().padStart(2, '0')} นาที/กม. (${speedDescription})</p>`;
 
     const percentagesToCalculate = [70, 80, 85, 90, 95, 97, 100, 105, 110];
 
@@ -63,39 +104,32 @@ function calculatePace() {
         const calculatedPaceMinutes = Math.floor(calculatedPaceSeconds / 60);
         const calculatedPaceRemainingSeconds = Math.round(calculatedPaceSeconds % 60);
 
-        let speedDescriptionLoop = "";
-        if (percent > 100) {
-            speedDescriptionLoop = "เร็วขึ้นจาก Input";
-        } else if (percent < 100) {
-            speedDescriptionLoop = `ช้าลง ${100-percent}% จาก Input`;
-        } else {
-            speedDescriptionLoop = "เท่ากับ Input";
-        }
-
-        resultsDiv.innerHTML += `<p>${percent}% = ${calculatedPaceMinutes}:${calculatedPaceRemainingSeconds.toString().padStart(2, '0')} นาที/กม. (${speedDescriptionLoop})</p>`;
+        resultsDiv.innerHTML += `<div class="result-item"><p>${percent}% = ${calculatedPaceMinutes}:${calculatedPaceRemainingSeconds.toString().padStart(2, '0')} นาที/กม.</p></div>`;
     });
 }
 
-// เพิ่ม Event Listener สำหรับกด Enter
+// เพิ่ม event listener สำหรับกด Enter
 const percentageInput = document.getElementById("percentage");
-const minutesInput = document.getElementById("minutes");
-const secondsInput = document.getElementById("seconds");
-
 percentageInput.addEventListener("keyup", function(event) {
-  if (event.key === "Enter") {
-    calculatePace();
-  }
+    if (event.key === "Enter") {
+        calculatePace();
+    }
 });
-minutesInput.addEventListener("keyup", function(event) {
-  if (event.key === "Enter") {
-    calculatePace();
-  }
-});
+
+const secondsInput = document.getElementById("seconds");
 secondsInput.addEventListener("keyup", function(event) {
-  if (event.key === "Enter") {
-    calculatePace();
-  }
+    if (event.key === "Enter") {
+        calculatePace();
+    }
 });
+
+const minutesInput = document.getElementById("minutes");
+minutesInput.addEventListener("keyup", function(event) {
+    if (event.key === "Enter") {
+        calculatePace();
+    }
+});
+
 </script>
 
 </body>
