--- a/pace2.html
+++ b/pace2.html
@@ -70,7 +70,7 @@ button:hover {
     </div>
 
     <label for="percentage">เปอร์เซ็นต์ (%):</label>
-    <input type="number" id="percentage" placeholder="เช่น 90" min="0" value="100">
+    <input type="number" id="percentage" placeholder="ตัวเลขจำนวนเต็ม" min="0" value="100">
 
     <button onclick="calculatePace()">คำนวณ</button>
 
