--- a/vcr2.html
+++ b/vcr2.html
@@ -149,7 +149,7 @@ function calculateZones() {
     });
 
     document.getElementById('paceResults').innerHTML = paceResults;
-    document.getElementById('pace-table').style.display = "block";
+    document.getElementById('pace-table').style.display = "none";
 }
 
     displayPaceTable(vcr);
