--- a/vcr2.html
+++ b/vcr2.html
@@ -134,10 +134,16 @@ function calculateZones() {
     document.getElementById('race16k').textContent = "16K: " + calculateRaceTime(16, 96, 103);
     document.getElementById('raceHalf').textContent = "Half Marathon: " + calculateRaceTime(21.0975, 94, 100);
     document.getElementById('raceFull').textContent = "Marathon: " + calculateRaceTime(42.195, 87, 93);
+
+
+ 
+
+    displayPaceTable(vcr);
+
+
 }
 
-
-    function displayPaceTable(vcr) {
+   function displayPaceTable(vcr) {
     const percentages = [70, 80, 85, 90, 95, 97, 100, 105, 110];
     let paceResults = "";
 
@@ -149,10 +155,9 @@ function calculateZones() {
     });
 
     document.getElementById('paceResults').innerHTML = paceResults;
-    document.getElementById('pace-table').style.display = "none";
+    document.getElementById('pace-table').style.display = "block";
 }
 
-    displayPaceTable(vcr);
 
 
     
